# Hermod

./: CMakeLists.txt  README.md
Source/: Hermod.cpp  Hermod.h  Hermod.ixx  main.cpp
Source/Private/: Hermod.cpp
Source/Private/Core/: Logger.cpp  Message.cpp  OS.h
Source/Private/Hermod/Core/: Logger.cpp  Message.cpp  OS.h
Source/Private/Hermod/Sinks/: ConsoleSink.cpp  FileSink.cpp
Source/Private/Sinks/: ConsoleSink.cpp  FileSink.cpp
Source/Public/: Hermod.h
Source/Public/Core/: Level.h  Logger.h  Message.h  Sink.h  VisibilityControl.h
Source/Public/Hermod/Core/: Level.h  Logger.h  Message.h  Sink.h  VisibilityControl.h
Source/Public/Hermod/Sinks/: ConsoleSink.h  FileSink.h
Source/Public/Sinks/: ConsoleSink.h  FileSink.h
Tests/: CMakeLists.txt
Tests/Example/: main.cpp
cmake/: HermodConfig.cmake.in
